# scad_tree

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
output/: bezier_star_sweep.stl  bottle.stl  bottle_cap.stl  cup.stl  k40_air_assist.stl  loft.stl  threaded_rod.stl
scad_tree/: Cargo.toml
scad_tree/examples/: bezier_star_sweep.rs  bottle.rs  cup.rs  k40_air_assist.rs  loft.rs  main.rs  scad_tree.rs  view_cubic_bezier_chain.rs
scad_tree/src/: dim2.rs  dim3.rs  lib.rs  metric_thread.rs  pipe.rs  scad.rs  triangulate.rs  viewer.rs
scad_tree_math/: Cargo.toml
scad_tree_math/src/: lib.rs  mt4.rs  pt2.rs  pt3.rs  pt4.rs  rng.rs
scadder/: Cargo.toml
scadder/src/: lib.rs
scadder_math/: Cargo.toml
scadder_math/src/: lib.rs  mt4.rs  pt2.rs  pt3.rs  pt4.rs  rng.rs
