[package]
name = "scad_tree"
version = "0.4.2"
edition = "2021"
description = "Generate OpenSCAD code from Rust."
license = "MIT"
authors = ["Michael H. Phillips <mrclean71774@gmail.com>"]
repository = "https://github.com/mrclean71774/scad_tree"
documentation = "https://docs.rs/scad_tree"
keywords = ["csg", "openscad", "stl"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scad_tree_math = { version = "0.1.x", path = "../scad_tree_math" }
