[package]
name = "scad_tree_math"
version = "0.1.1"
edition = "2021"
description = "Math library for scad_tree"
license = "MIT"
authors = ["Michael H. Phillips <mrclean71774@gmail.com>"]
repository = "https://github.com/mrclean71774/scad_tree"
documentation = "https://docs.rs/scad_tree_math"
keywords = ["math", "linear_algebra"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
